js/js.translator/testData/incremental/invalidation/companionProperties/main/m.kt
fun box(stepId: Int): String {
    if (test() != stepId) return "Fail"
    return "OK"
}
